--- a/src/app/features/conges-management/conges-management.html
+++ b/src/app/features/conges-management/conges-management.html
@@ -1,7 +1,6 @@
 <div class="conge-management-container">
   <div class="header">
-    <h1 class="title">🗂️ Gestion des demandes de congés</h1>
-    <p class="subtitle">Tableau de bord administratif des demandes de congés</p>
+    <h1 class="title">Demandes de congés</h1>
   </div>
 
   <div class="stats-row">
