--- a/src/app/features/dashboard/dashboard.html
+++ b/src/app/features/dashboard/dashboard.html
@@ -2,7 +2,7 @@
 
   <!-- Header -->
   <div class="header">
-    <h1>Tableau de bord</h1>
+    <h1>Statistiques des congés de l'entreprise</h1>
     <p>Bienvenue, {{ userName }} !</p>
   </div>
 
@@ -40,7 +40,7 @@
         <i class="fas fa-users"></i>
       </div>
       <div class="card-info">
-        <p>Employes</p>
+        <p>Employés</p>
         <h2>{{ users }}</h2>
       </div>
     </div>
