--- a/src/app/features/demande-avance-management/demande-avance-management.html
+++ b/src/app/features/demande-avance-management/demande-avance-management.html
@@ -1,7 +1,6 @@
 <div class="management-container">
   <div class="header">
-    <h1 class="title">💸 Gestion des Demandes d'Avance</h1>
-    <p class="subtitle">Tableau de bord pour les demandes d'avance sur salaire</p>
+    <h1 class="title">Demandes d'avance sur salaire</h1>
   </div>
 
   <div class="table-container mat-elevation-z8">
