--- a/src/app/features/layout/sidebar/sidebar.html
+++ b/src/app/features/layout/sidebar/sidebar.html
@@ -38,7 +38,7 @@
         <li class="nav-item" *ngIf="isSecretaire">
           <a class="nav-link" routerLink="/demande-avance" routerLinkActive="active">
             <i class="fa fa-money-bill-wave text-dark"></i>
-            <span *ngIf="!isCollapsed"> Demande d'Avance </span>
+            <span *ngIf="!isCollapsed"> Demande d'avance </span>
           </a>
         </li>
       </ul>
