--- a/src/app/shared/components/leave-history-modal/leave-history-modal.component.html
+++ b/src/app/shared/components/leave-history-modal/leave-history-modal.component.html
@@ -19,8 +19,8 @@
     <!-- Stats -->
     <div class="stats-container">
       <div class="stat-card total">
-        <h4>Total Jours</h4>
-        <p>{{ stats.totalDays }}</p>
+        <h4>Crédits restants</h4>
+        <p>{{ worker.totalCongeDays - worker.usedCongeDays }}</p>
       </div>
       <div class="stat-card approved">
         <h4>Approuvés</h4>
