--- a/src/app/features/conges-management/conges-management.scss
+++ b/src/app/features/conges-management/conges-management.scss
@@ -11,10 +11,13 @@
 
   .header {
     margin-bottom: 2rem;
+    padding-bottom: 1rem;
+    border-bottom: 1px solid var(--border-color);
+    
     .title {
       font-size: 2rem;
-      font-weight: 600;
-      color: #333;
+      font-weight: 700;
+      color: var(--text-primary);
       margin: 0;
     }
     .subtitle {
@@ -152,9 +155,15 @@
 
 .conge-management-container {
   .header {
-    margin-bottom: 25px;
+    margin-bottom: 2rem;
+    padding-bottom: 1rem;
+    border-bottom: 1px solid var(--border-color);
+    
     .title {
-      font-size: 28px;
+      font-size: 2rem;
+      font-weight: 700;
+      color: var(--text-primary);
+      margin: 0;
       font-weight: 600;
       color: #333;
     }
