--- a/src/app/features/mission-management/mission-management.scss
+++ b/src/app/features/mission-management/mission-management.scss
@@ -9,11 +9,15 @@
 
 .conge-management-container {
   .header {
-    margin-bottom: 25px;
+    margin-bottom: 2rem;
+    padding-bottom: 1rem;
+    border-bottom: 1px solid var(--border-color);
+    
     .title {
-      font-size: 28px;
-      font-weight: 600;
-      color: #333;
+      font-size: 2rem;
+      font-weight: 700;
+      color: var(--text-primary);
+      margin: 0;
     }
     .subtitle {
       font-size: 16px;
